# Ichika

./: README.md  pyproject.toml
Bot/: ichika.py
Bot/Cogs/: main-help.py
