[tool.poetry]
name = "Ichika"
version = "0.1.0"
description = ""
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
py-cord = "2.0.0b7"
python-dotenv = "^0.20.0"
aiodns = "^3.0.0"
Brotli = "^1.0.9"
ujson = "^5.2.0"
aiohttp = "^3.8.1"
cchardet = "^2.1.7"
pysimdjson = "^4.0.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
